# student-council-shrimp-game-checkin

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: backend.rs  frontend.rs  main.rs
src/backend/: cameras.rs  render_take.rs  servers.rs
src/backend/cameras/: gphoto2.rs  nokhwa.rs
src/backend/servers/: mock.rs  server.rs  supabase.rs
src/frontend/: camera_feed.rs  loading_spinners.rs  main_app.rs  setup.rs  team_row.rs  title_overlay.rs
src/frontend/camera_feed/: border_radius.rs
src/frontend/loading_spinners/: circular.rs
src/frontend/main_app/: animations.rs  status_overlay.rs
src/frontend/main_app/animations/: capture_flash.rs  capture_preview.rs  countdown_circle.rs  ready.rs  upsell_templates.rs
