[package]
name = "photo-booth-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
nokhwa = { git = "https://github.com/l1npengtul/nokhwa.git", branch = "0.10", features = [
  "input-native",
  "output-threaded",
] }
iced = { version = "0.13.1", features = [
  "tokio",
  "image",
  "qr_code",
  "svg",
  "lazy",
] }
image = "0.25.2"
anim = "0.1.4"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }


# The following lines from https://bevyengine.org/learn/quick-start/getting-started/setup/
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
